update pos_e_w, protein-debug-3

--- a/configs/experiment/protein.yaml
+++ b/configs/experiment/protein.yaml
@@ -29,6 +29,7 @@ model:
     n_layers: 8
     lambda_train: [5, 0]
     extra_features: null
+    pos_e_w: 1.0
 
     # Do not set hidden_mlp_E, dim_ffE too high, computing large tensors on the edges is costly
     # At the moment (03/08), y contains quite little information
