delete unnecessary loss items: x and y

--- a/configs/experiment/protein.yaml
+++ b/configs/experiment/protein.yaml
@@ -17,7 +17,7 @@ general:
     final_model_chains_to_save: 5
     # NOTE(jiahang): new config
     save_chain_results: /home/jiahang/DiGress/chain_results/${now:%Y-%m-%d}/${now:%H-%M-%S}-${general.name}
-    save_chain_every_steps: 5 # no need to save all steps
+    save_chain_every_steps: 2 # no need to save all steps
 train:
     # n_epochs: 50000
     n_epochs: 100
@@ -25,11 +25,12 @@ train:
     save_model: True
 model:
     transition: ND
-    sample_forward: true
+    sample_forward: false
     # diffusion_steps: 1000
-    diffusion_steps: 100
+    # diffusion_steps: 100
+    diffusion_steps: 20
     n_layers: 8
-    lambda_train: [5, 0]
+    lambda_train: [1, 0]
     extra_features: null
     pos_e_w: 1.0
 
