1) slope_sigmoid 2) transfer dataset config to experiment config 3) move sigmoid part out of process() as transform() 4) use edge prob matrix to replace sampled adjacent of pyg data object

--- a/configs/dataset/protein.yaml
+++ b/configs/dataset/protein.yaml
@@ -1,3 +1,4 @@
+# NOTE(jiahang): this file is neglected
 name: protein
 remove_h: null
 network_dir: 'data/ND-code-datasets/Application2-protein-contact-maps/full-predictions'
@@ -6,3 +7,4 @@ norm: ND_norm
 
 eps: 1e-3 # only used in eigen norm and ND norm
 diffusion_steps: ${model.diffusion_steps} # only used in ND norm
+slope: 1 # only used in ND norm for changing slope of sigmoid
