--- a/configs/experiment/protein.yaml
+++ b/configs/experiment/protein.yaml
@@ -17,14 +17,15 @@ general:
     wandb: 'online'
     resume: null            # If resume, path to ckpt file from outputs directory in main directory
     test_only: null
+    infer: false
     check_val_every_n_epochs: 10
     sample_every_val: 10000 # disable validation sampling, no need
-    samples_to_generate: 5
-    samples_to_save: 5
-    chains_to_save: 1
+    samples_to_generate: 0
+    samples_to_save: 0
+    chains_to_save: 0
     final_model_samples_to_generate: 0 # disable final sampling
-    final_model_samples_to_save: 5
-    final_model_chains_to_save: 5
+    final_model_samples_to_save: 0
+    final_model_chains_to_save: 0
     # NOTE(jiahang): new config
     save_chain_results: /home/jiahang/DiGress/chain_results/${now:%Y-%m-%d}/${now:%H-%M-%S}-${general.name}
     save_chain_every_steps: 2 # no need to save all steps
